--- a/index.html
+++ b/index.html
@@ -3,8 +3,48 @@
   <head>
     <meta charset="utf-8">
     <title>Form Practice</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.3.1.js"integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="crossorigin="anonymous"></script>
+    <script src="js/scripts.js" type="text/javascript"></script>
   </head>
   <body>
+    <div class="container">
+      <div class="forms">
+        <h2>Please fill out this survey</h2>
+        <form class="survey">
+          Name: <input type="text" name="fullname"><br />
+          Email: <input type="text" name="email"><br />
 
+          <label for="food">What is your favorite type of food:</label>
+          <select class="form-control" id="food">
+            <option>Chinese</option>
+            <option>Italian</option>
+            <option>American</option>
+            <option>Mexican</option>
+          </select>
+
+          <h4>Music Radio Form</h4>
+          <div class="radio">
+            <input type="radio" name="music" value="hip hop">
+            hip hop
+          </div>
+          <div class="radio">
+            <input type="radio" name="music" value="country">
+            country
+          </div>
+          <div class="radio">
+            <input type="radio" name="music" value="rock">
+            rock
+          </div>
+
+          <div class="form-group">
+            <label for="born">Date of Birth:</label>
+            <input id="born" class="form-control" name="dob" type="date">
+          </div>
+          <input type="submit">
+        </form>
+      </div>
+    </div>
   </body>
 </html>
